--- a/tentang.html
+++ b/tentang.html
@@ -21,7 +21,7 @@
                 <div
                     class="collapse navbar-collapse justify-content-end" id="navcol-1">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html" style="color:#ffffff;">Beranda</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="index.php" style="color:#ffffff;">Beranda</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="tentang.html" style="color:#ffffff;">Tentang</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="kontak.html" style="color:#ffffff;">Hubungi Kami</a></li>
                     </ul>
